add force flag
